force-app/main/default/objects/Book__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below 18</fullName>
            </value>
            <value>
                <fullName>18+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>