force-app/main/default/objects/Book__c/fields/Book_Description__c.field-meta.xml
<CustomField>
    <fullName>Book_Description__c</fullName>
    <label>Book Description</label>
    <type>TextArea</type>
</CustomField>