force-app/main/default/objects/Book__c/fields/Book_Stock__c.field-meta.xml
<CustomField>
    <fullName>Book_Stock__c</fullName>
    <label>Book Stock</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>