force-app/main/default/objects/Book__c/fields/BookId__c.field-meta.xml
<CustomField>
    <fullName>BookId__c</fullName>
    <displayFormat>BK-{0000}</displayFormat>
    <label>BookId</label>
    <type>AutoNumber</type>
</CustomField>