force-app/main/default/objects/Book__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Action and adventure</fullName>
            </value>
            <value>
                <fullName>Alternate history</fullName>
            </value>
            <value>
                <fullName>Anthology</fullName>
            </value>
            <value>
                <fullName>Chick lit</fullName>
            </value>
            <value>
                <fullName>Children&apos;s</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Comic book</fullName>
            </value>
            <value>
                <fullName>Coming-of-age</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Fairytale</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Graphic novel</fullName>
            </value>
            <value>
                <fullName>Historical fiction</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Paranormal romance</fullName>
            </value>
            <value>
                <fullName>Picture book</fullName>
            </value>
            <value>
                <fullName>Poetry</fullName>
            </value>
            <value>
                <fullName>Political thriller</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Satire</fullName>
            </value>
            <value>
                <fullName>Science fiction</fullName>
            </value>
            <value>
                <fullName>Short story</fullName>
            </value>
            <value>
                <fullName>Suspense</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Young adult</fullName>
            </value>
            <value>
                <fullName>Nonfiction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>