force-app/main/default/objects/Book__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Writer</label>
    <referenceTo>Writer__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>