force-app/main/default/objects/Book__c/fields/Writer_Name__c.field-meta.xml
<CustomField>
    <fullName>Writer_Name__c</fullName>
    <formula>Writer__r.Name__c</formula>
    <label>Writer Name</label>
    <type>Text</type>
</CustomField>