force-app/main/default/objects/Book__c/recordTypes/Above_Eighteen.recordType-meta.xml
<RecordType>
    <fullName>Above_Eighteen</fullName>
    <active>true</active>
    <label>Above Eighteen</label>
</RecordType>