force-app/main/default/objects/Book__c/recordTypes/Below_Eighteen.recordType-meta.xml
<RecordType>
    <fullName>Below_Eighteen</fullName>
    <active>true</active>
    <label>Below Eighteen</label>
</RecordType>