force-app/main/default/objects/Book__c/listViews/All_Books.listView-meta.xml
<ListView>
    <fullName>All_Books</fullName>
    <columns>BookId__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Writer__c</columns>
    <columns>Book_Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Books</label>
</ListView>